# foolisbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  default.nix  shell.nix
src/: core.h  entry.asm  main.c  memcopy.h  syscall.asm  syscalls.h  syscalls_num.h
src/libs/libc/: libc_internal.h
src/libs/libc/asm/: io.asm
src/libs/libc/include/: flags.h  fs.h  io.h  libc.h  stdio.h  string.h  types.h
src/libs/libc/src/: fs.c  io.c  stdio.c  string.c
src/libs/sys/: sys.h  sys_call.asm  syscalls.h
src/utils/: cat.c  cp.c  echo.c  mkdir.c
